--- a/index.html
+++ b/index.html
@@ -1695,7 +1695,9 @@
         <img src="./assets/images/close.svg" alt="close" />
       </div>
       <div class="modal-body no-head">
-        <h2 class="fw-600 mb-4 resist-size">Sent us a massage</h2>
+        <h2 class="fw-600 mb-4 resist-size text-center text-sm-left">
+          Sent us a massage
+        </h2>
         <div class="custom-form-control pt-3">
           <input
             class="custom-input"
@@ -1717,6 +1719,7 @@
             rows="5"
           ></textarea>
         </div>
+        <div class="my-5 w-100"></div>
         <div class="bottom-btn-sm">
           <button class="btn btn-bg-primary mt-4">Sent message</button>
         </div>
@@ -1727,7 +1730,9 @@
         <img src="./assets/images/close.svg" alt="close" />
       </div>
       <div class="modal-body no-head">
-        <h2 class="fw-600 mb-4 resist-size">Request Call Back</h2>
+        <h2 class="fw-600 mb-4 resist-size text-center text-sm-left">
+          Request Call Back
+        </h2>
         <div class="custom-form-control pt-3">
           <input
             class="custom-input"
@@ -1911,15 +1916,15 @@
                 "
               >
                 <img
-                  class="d-none d-sm-block"
+                  class="d-none d-sm-block sebi-img"
                   src="./assets/images/sebi.svg"
                   alt="sebi"
                 />
-                <img
+                <!-- <img
                   class="sm d-block d-sm-none my-4"
                   src="./assets/images/sebi-light.svg"
                   alt="sebi"
-                />
+                /> -->
                 <div class="fs-20 lh-26 mt-4 d-none d-sm-block">
                   Sebi Registered company. 100% secure
                 </div>
@@ -2054,7 +2059,7 @@
                   Google
                 </button>
               </div>
-              <div class="fs-16 mt-sm-5 mt-3 text-center text-md-left">
+              <div class="fs-16 mt-sm-5 mt-3 text-center text-md-left pb-5">
                 Already have an account?
                 <a href=""><span class="fw-600 text-yellow">Sign in</span></a>
               </div>
@@ -2080,11 +2085,13 @@
                   align-items-center
                 "
               >
-                <img src="./assets/images/otp.svg" alt="otp" />
+                <div class="img">
+                  <img src="./assets/images/otp.svg" alt="otp" />
+                </div>
               </div>
             </div>
             <div class="col-md-7">
-              <h2 class="fw-400 resist-size text-center text-md-left">
+              <h2 class="fw-600 resist-size text-center text-md-left">
                 Verify Your Mobile OTP
               </h2>
               <div class="fs-14 sub">
@@ -2128,14 +2135,14 @@
                   </div>
                 </div>
 
-                <div class="container p-0 mt-3 mt-sm-5 btns">
+                <div class="container p-0 btns">
                   <div class="row">
                     <div class="col-12 col-sm-6 py-3 py-sm-0">
                       <button class="btn btn-outlined-dark">
                         <span class="fs-16">Resend</span>
                       </button>
                     </div>
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6 mb-5">
                       <button class="btn btn-bg-primary">
                         <span class="fs-16">Submit</span>
                       </button>
