--- a/index.html
+++ b/index.html
@@ -2246,7 +2246,7 @@
 
     <div class="slider_text_cont">
       <div class="slider_text_cont_p1">
-        <a href="#"><img src="./assets/images/message.svg" /></a>
+        <a class="with-border" href="#"><img src="./assets/images/message.svg" /></a>
         <a href="#"><img src="./assets/images/call.svg" /></a>
       </div>
     </div>
