--- a/allocation-confirmation.html
+++ b/allocation-confirmation.html
@@ -40,11 +40,7 @@
           <div class="text-fields">
             <div class="custom-form-control">
               <h4 class="text-light-2">Allocation</h4>
-              <input
-                class="custom-input active with-outline"
-                type="text"
-                value="30%"
-              />
+              <input class="custom-input active" type="text" value="30%" />
             </div>
             <div class="custom-form-control">
               <h4 class="text-light-2">Amount</h4>
