--- a/details.html
+++ b/details.html
@@ -176,7 +176,7 @@
                     <input
                       class="custom-input"
                       id="example"
-                      type="date"
+                      type="text"
                       placeholder="DD/MM/YYYY"
                     />
                     <svg
@@ -264,7 +264,7 @@
                 </div>
               </div>
 
-              <div class="details-item half-inner">
+              <div class="details-item half-inner last-child">
                 <div class="custom-form-control">
                   <h4 class="text-light-2">RELATIONSHIP</h4>
                   <div class="custom-select">
@@ -280,7 +280,9 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-bg-primary continue">Continue</button>
+      </div>
+      <div class="bottom-btn-sm desktop continue">
+        <button class="btn btn-bg-primary mt-4">Continue</button>
       </div>
     </section>
 
