--- a/investment-ready.html
+++ b/investment-ready.html
@@ -25,7 +25,7 @@
     <div id="dark-overlay"></div>
 
     <section id="investment-ready">
-      <div class="custom-modal bottem-aligned-laptop">
+      <div class="custom-modal bottem-aligned">
         <div class="close">
           <img src="./assets/images/close.svg" alt="close" />
         </div>
