--- a/uploader.html
+++ b/uploader.html
@@ -88,7 +88,7 @@
 
                   <div class="box-content">
                     <div class="box-subtitle fs-1366-14">Signature</div>
-                    <div class="box-text fs-1366-14">
+                    <div class="box-text fs-1366-14 n-padding">
                       Your signature should match with your PAN Card’s
                       signature.
                     </div>
@@ -108,12 +108,19 @@
                 <span class="text-yellow fw-bold">browse</span>
               </h4>
             </div>
-            <h4 class="text-end text-light-2 mt-2 pe-3 fs-14">
+            <h4 class="text-end text-light-2 mt-2 fs-14 fs-1366-12 pe-2">
               Only Jpg and png with maximum file size 2Mb
             </h4>
 
-            <div class="uploading mt-4 d-block d-lg-none">
-              <div class="upload-head d-flex justify-content-between">
+            <div class="uploading mt-5 d-block d-lg-none last-child desktop">
+              <div
+                class="
+                  upload-head
+                  d-flex
+                  justify-content-between
+                  align-items-center
+                "
+              >
                 <div
                   class="
                     file-info
@@ -126,10 +133,17 @@
                     <img src="./assets/vector/file.svg" alt="file" />
                   </div>
                   <div class="file-name">
-                    <h4 class="fw-normal">Pan card.jpg</h4>
+                    <h4 class="fw-normal fs-12">Pan card.jpg</h4>
                   </div>
                 </div>
-                <div class="cancel">
+                <div
+                  class="
+                    cancel
+                    d-flex
+                    justify-content-center
+                    align-items-center
+                  "
+                >
                   <img src="./assets/vector/cancel-upload.svg" alt="cancel" />
                 </div>
               </div>
@@ -139,12 +153,14 @@
               </div>
               <div class="upload-footer mt-1 d-flex justify-content-between">
                 <h5 class="fs-12 fw-normal">sign.jpg</h5>
-                <h4 class="fw-normal text-end text-light-2">128kb</h4>
+                <h4 class="fw-normal text-end text-light-2 fs-12">128kb</h4>
               </div>
             </div>
           </div>
         </div>
-        <button class="btn btn-bg-primary continue">Continue</button>
+      </div>
+      <div class="bottom-btn-sm desktop continue">
+        <button class="btn btn-bg-primary mt-4">Continue</button>
       </div>
     </section>
 
