--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -394,161 +394,180 @@
       class="n-rm-padding refer-and-invest-right"
     >
       <section id="refer-and-invest">
-        <h2 class="title">
-          <img src="./assets/vector/back-arrow.svg" alt="back" /> Refer and
-          Invest
-        </h2>
-
-        <div class="tabs">
-          <div data-toggle="#rewards" class="tab active fs-16">
-            Total Rewards
-          </div>
-          <div data-toggle="#referral" class="tab fs-16">My Referral</div>
-          <div data-toggle="#last-referral" class="tab fs-16">
-            Last Referral
-          </div>
+        <div class="top-fixed-bar">
+          <h2 class="title">
+            <img src="./assets/vector/back-arrow.svg" alt="back" /> Refer and
+            Invest
+          </h2>
         </div>
 
-        <div class="cards">
-          <div class="card active" id="rewards">
-            <div class="img">
-              <img src="./assets/vector/refer-and-invest-1.svg" alt="1" />
+        <div class="lower-content">
+          <div class="tabs pt-5">
+            <div data-toggle="#rewards" class="tab active fs-16">
+              Total Rewards
             </div>
-            <div class="text align-items-sm-start">
-              <div class="sub-section">
-                <h4 class="text-light-2 fs-1366-14 fs-650-1 small-text">
-                  SIGNED-UP REFERRAL
-                </h4>
-                <h1 class="fs-52 fs-1366-40 mt-2 fw-600 fs-650-32 big-text">
-                  09
-                </h1>
-              </div>
-              <div class="sub-section">
-                <h4 class="text-light-2 fs-1366-14 fs-650-14 mb-sm small-text">
-                  PENDING
-                </h4>
-                <h1 class="fs-52 fs-1366-40 mt-2 fw-600 fs-650-32 big-text">
-                  01
-                </h1>
-              </div>
-              <div class="sub-section">
-                <h4
-                  class="
-                    text-light-2
-                    fs-1366-14 fs-650-14
-                    mb-sm
-                    mt-sm
-                    small-text
-                  "
-                >
-                  TOTAL REWARDS
-                </h4>
-                <h1 class="fs-52 fs-1366-40 mt-2 fw-600 fs-650-32 big-text">
-                  ₹4,500
-                </h1>
-              </div>
-              <div class="sub-section">
-                <button
-                  class="
-                    btn btn-bg-primary
-                    primary
-                    flex-grow-0
-                    fs-18 fs-1366-16
-                  "
-                >
-                  Invest
-                </button>
-              </div>
+            <div data-toggle="#referral" class="tab fs-16">My Referral</div>
+            <div data-toggle="#last-referral" class="tab fs-16">
+              Last Referral
             </div>
           </div>
-          <div class="card" id="referral">
-            <div class="img">
-              <img src="./assets/vector/refer-and-invest-1.svg" alt="1" />
-            </div>
-            <div class="text refer">
-              <div class="sub-section referral">
-                <h4 class="text-light-2 fs-1366-14">MY REFERRAL</h4>
-                <h3 class="fw-normal mt-3 fs-1366-16">
-                  Share Your Promo Code. With A Friend And You Both Get ₹500.
-                </h3>
+
+          <div class="cards">
+            <div class="card active" id="rewards">
+              <div class="img">
+                <img src="./assets/vector/refer-and-invest-1.svg" alt="1" />
               </div>
-              <div class="social-sub-section sub-section">
-                <div class="copy fs-18 fs-1366-14">
-                  PALA2389
-                  <img
-                    class="copyer"
-                    src="./assets/vector/copy.svg"
-                    alt="copy"
-                  />
+              <div class="text align-items-sm-start">
+                <div class="sub-section">
+                  <h4 class="text-light-2 fs-18 fs-1366-14 fs-650-1 small-text">
+                    SIGNED-UP REFERRAL
+                  </h4>
+                  <h1 class="fs-48 fs-1366-40 mt-2 fw-600 fs-650-32 big-text">
+                    09
+                  </h1>
                 </div>
-                <div class="d-flex align-items-center social mt-3">
-                  <a href="#">
-                    <img
-                      src="./assets/vector/facebook-refer.svg"
-                      alt="facebook"
-                    />
-                  </a>
-                  <a href="#">
-                    <img
-                      src="./assets/vector/twitter-refer.svg"
-                      alt="twitter"
-                    />
-                  </a>
-                  <a href="#">
-                    <img
-                      src="./assets/vector/whatsapp-refer.svg"
-                      alt="whatsapp"
-                    />
-                  </a>
-                  <a href="#">
-                    <img
-                      src="./assets/vector/linkedin-refer.svg"
-                      alt="linkedin"
-                    />
-                  </a>
-                  <a href="#">
-                    <img
-                      src="./assets/vector/instagram-refer.svg"
-                      alt="instagram"
-                    />
-                  </a>
-                  <a href="#">
-                    <img src="./assets/vector/gmail-refer.svg" alt="gmail" />
-                  </a>
+                <div class="sub-section">
+                  <h4
+                    class="
+                      text-light-2
+                      fs-18 fs-1366-14 fs-650-14
+                      mb-sm
+                      small-text
+                    "
+                  >
+                    PENDING
+                  </h4>
+                  <h1 class="fs-48 fs-1366-40 mt-2 fw-600 fs-650-32 big-text">
+                    01
+                  </h1>
+                </div>
+                <div class="sub-section">
+                  <h4
+                    class="
+                      text-light-2
+                      fs-18 fs-1366-14 fs-650-14
+                      mb-sm
+                      mt-sm
+                      small-text
+                    "
+                  >
+                    TOTAL REWARDS
+                  </h4>
+                  <h1 class="fs-48 fs-1366-40 mt-2 fw-600 fs-650-32 big-text">
+                    ₹4,500
+                  </h1>
+                </div>
+                <div class="sub-section">
+                  <button
+                    class="
+                      btn btn-bg-primary
+                      primary
+                      flex-grow-0
+                      fs-24 fs-1366-16
+                    "
+                  >
+                    Invest
+                  </button>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card" id="last-referral">
-            <div class="img">
-              <img src="./assets/vector/refer-and-invest-1.svg" alt="1" />
-            </div>
-            <div class="text refer last">
-              <div class="sub-section form">
-                <h4 class="text-light-2 fs-1366-14">LAST REFERRAL</h4>
-                <h3 class="fs-20 mt-3 fs-1366-16">ANUJ KATIYAR</h3>
-                <label class="checkbox-container fs-1366-16"
-                  >Signed Up
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container mt-3 fs-1366-16"
-                  >Investment
-                  <input type="checkbox" />
-                  <span class="checkmark"></span>
-                </label>
+            <div class="card" id="referral">
+              <div class="img">
+                <img src="./assets/vector/refer-and-invest-1.svg" alt="1" />
               </div>
-              <div class="sub-section d-flex justify-content-center reminder">
-                <button
-                  class="
-                    btn btn-bg-primary
-                    primary
-                    flex-grow-0
-                    fs-18 fs-1366-16
-                  "
-                >
-                  Sent Reminder
-                </button>
+              <div class="text refer">
+                <div class="sub-section referral">
+                  <h4
+                    class="text-light-2 fs-18 fs-1366-14 small-text other-card"
+                  >
+                    MY REFERRAL
+                  </h4>
+                  <h3 class="fw-normal mt-3 fs-1366-16">
+                    Share Your Promo Code. With A Friend And You Both Get ₹500.
+                  </h3>
+                </div>
+                <div class="social-sub-section sub-section">
+                  <div class="copy fs-18 fs-1366-14 fs-768-18 fw-600">
+                    PALA2389
+                    <img
+                      class="copyer"
+                      src="./assets/vector/copy.svg"
+                      alt="copy"
+                    />
+                  </div>
+                  <div class="d-flex align-items-center social mt-3">
+                    <a href="#">
+                      <img
+                        src="./assets/vector/facebook-refer.svg"
+                        alt="facebook"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        src="./assets/vector/twitter-refer.svg"
+                        alt="twitter"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        src="./assets/vector/whatsapp-refer.svg"
+                        alt="whatsapp"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        src="./assets/vector/linkedin-refer.svg"
+                        alt="linkedin"
+                      />
+                    </a>
+                    <a href="#">
+                      <img
+                        src="./assets/vector/instagram-refer.svg"
+                        alt="instagram"
+                      />
+                    </a>
+                    <a href="#">
+                      <img src="./assets/vector/gmail-refer.svg" alt="gmail" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card" id="last-referral">
+              <div class="img">
+                <img src="./assets/vector/refer-and-invest-1.svg" alt="1" />
+              </div>
+              <div class="text refer last">
+                <div class="sub-section form">
+                  <h4
+                    class="text-light-2 fs-18 fs-1366-14 small-text other-card"
+                  >
+                    LAST REFERRAL
+                  </h4>
+                  <h3 class="fs-20 mt-3 fs-1366-16">ANUJ KATIYAR</h3>
+                  <label class="checkbox-container fs-1366-16"
+                    >Signed Up
+                    <input type="checkbox" checked="checked" />
+                    <span class="checkmark"></span>
+                  </label>
+                  <label class="checkbox-container mt-3 fs-1366-16"
+                    >Investment
+                    <input type="checkbox" />
+                    <span class="checkmark"></span>
+                  </label>
+                </div>
+                <div class="sub-section d-flex justify-content-center reminder">
+                  <button
+                    class="
+                      btn btn-bg-primary
+                      primary
+                      flex-grow-0
+                      fs-24 fs-1366-16
+                    "
+                  >
+                    Sent Reminder
+                  </button>
+                </div>
               </div>
             </div>
           </div>
