--- a/notifications.html
+++ b/notifications.html
@@ -390,31 +390,36 @@
 
     <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
-    <main id="sidenav-right-container" class="transactions-sidenav-right">
+    <main
+      id="sidenav-right-content"
+      class="transactions-sidenav-right notifications-sidenav-right"
+    >
       <section id="notifications">
-        <div class="head">
-          <img class="close" src="./assets/images/close.svg" alt="close" />
-          <div class="text">
-            <h2 class="fs-1366-24">
-              <img src="./assets/vector/back-arrow.svg" alt="arrow" /> All
-              Notifications
-            </h2>
-            <h4 class="text-light-2 fs-18 fs-1366-14 mt-2">
-              You Have 03 Unread Messages.
-            </h4>
-          </div>
-          <div>
-            <button class="btn p-0 d-flex align-items-end">
-              <h4 class="fs-18 fs-1366-14 fs-768-12 fw-600">
-                Mark All As Read
+        <div class="top-fixed-bar">
+          <div class="head">
+            <img class="close" src="./assets/images/close.svg" alt="close" />
+            <div class="text">
+              <h2 class="fs-1366-24">
+                <img src="./assets/vector/back-arrow.svg" alt="arrow" /> All
+                Notifications
+              </h2>
+              <h4 class="text-light-2 fs-18 fs-1366-14 mt-2 fw-600">
+                You Have 03 Unread Messages.
               </h4>
-            </button>
+            </div>
+            <div>
+              <button class="btn p-0 d-flex align-items-end">
+                <h4 class="fs-18 fs-1366-14 fs-768-12 fw-600">
+                  Mark All As Read
+                </h4>
+              </button>
+            </div>
           </div>
         </div>
 
-        <div class="my-4 shadowy"></div>
+        <div class="shadowy"></div>
 
-        <div class="body mt-3">
+        <div class="body mt-3 lower-content">
           <div class="item green">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -447,7 +452,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
@@ -483,7 +488,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
@@ -519,7 +524,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
@@ -555,7 +560,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
@@ -591,7 +596,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
@@ -627,7 +632,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
@@ -663,7 +668,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
@@ -699,7 +704,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
@@ -735,7 +740,7 @@
                   text-center
                 "
               >
-                <span class="text-light-2 fs-17 fs-1366-14">Action</span>
+                <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
               </button>
             </div>
           </div>
