--- a/transaction.html
+++ b/transaction.html
@@ -391,17 +391,20 @@
 
       <main id="sidenav-right-content" class="transactions-right">
         <section id="transaction">
-          <a href="./transactions.html">
+          <a class="top-fixed-bar" href="./transactions.html">
             <h2 class="title fs-1366-24">
               <!-- <img
                 class="back"
                 src="./assets/vector/arrow-left.svg"
                 alt="arrow"
               /> -->
+              <img class="back" src="./assets/vector/back-arrow.svg" alt="">
               Back To Transactions
             </h2>
-            <h4 class="text-light-2 fs-14 d-block d-lg-none">09 May 2021</h4>
+            <h4 class="text-light-2 fs-14 sub">09 May 2021</h4>
           </a>
+
+          <div class="lower-content">
 
           <div class="transaction mt-5 pt-lg-4 pt-0">
             <div class="transaction-head">
@@ -422,9 +425,9 @@
               </div>
               <div class="status">
                 <button
-                  class="btn btn-outlined green w-1366-80 w-768-72 px-0 py-1"
+                  class="btn btn-outlined green w-1366-80 w-768-72 h-768-24 px-0 py-1"
                 >
-                  <span class="fs-16 fs-1366-14 fs-768-12">Success</span>
+                  <span class="fs-16 fs-1366-14 fs-768-12 fw-600">Success</span>
                 </button>
               </div>
               <div class="amount">
@@ -461,6 +464,7 @@
                 </h3>
               </div>
             </div>
+          </div>
           </div>
         </section>
 
