--- a/transactions.html
+++ b/transactions.html
@@ -388,51 +388,48 @@
 
     <!-- --------------------------------------------- NAVBAR END --------------------------------------------- -->
 
+    <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
 
-      <!-- --------------------------------------------- MAIN START --------------------------------------------- -->
-
-      <main id="sidenav-right-content" class="transactions-sidenav-right">
-        <section id="transactions">
-          <div class="title">
-            
-
-            <div
-              class="
-                transactions-head
-                d-flex
-                justify-content-between
-                align-items-center
-                mt-4
-              "
-            >
-              <h2 class="fs-1366-24 fs-575-20">
-              <img class="back" src="./assets/vector/back-arrow.svg" alt="" /> All
-              Transactions
+    <main id="sidenav-right-content" class="transactions-sidenav-right">
+      <section id="transactions">
+        <div class="title top-fixed-bar">
+          <div
+            class="
+              transactions-head
+              d-flex
+              justify-content-between
+              align-items-center
+            "
+          >
+            <h2 class="fs-1366-24 fs-575-20">
+              <img class="back" src="./assets/vector/back-arrow.svg" alt="" />
+              All Transactions
               <div class="text-light-2 fs-14 mt-2 d-769-none">02 May 2021</div>
             </h2>
-              <div class="d-flex justify-content-end search-sm-container">
-                <div class="custom-form-control search-sm">
-                  <input
-                    class="custom-input"
-                    type="search"
-                    placeholder="Search Your Fund"
-                  />
-                  <img src="./assets/vector/search.svg" alt="search" />
-                </div>
-                <div class="custom-form-control filter">
-                  <div class="custom-select">
-                    <select>
-                      <option value="1">All</option>
-                      <option value="2">Success</option>
-                      <option value="3">Unsuccess</option>
-                      <option value="4">Pending</option>
-                    </select>
-                  </div>
+            <div class="d-flex justify-content-end search-sm-container">
+              <div class="custom-form-control search-sm">
+                <input
+                  class="custom-input"
+                  type="search"
+                  placeholder="Search Your Fund"
+                />
+                <img src="./assets/vector/search.svg" alt="search" />
+              </div>
+              <div class="custom-form-control filter">
+                <div class="custom-select">
+                  <select>
+                    <option value="1">All</option>
+                    <option value="2">Success</option>
+                    <option value="3">Unsuccess</option>
+                    <option value="4">Pending</option>
+                  </select>
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
+        <div class="lower-content">
           <div class="transactions-body mt-2">
             <a class="transaction">
               <div class="details">
@@ -450,7 +447,9 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">
+                    INVEST
+                  </h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -488,7 +487,9 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">
+                    INVEST
+                  </h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -526,7 +527,9 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">WITHDRAW</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">
+                    WITHDRAW
+                  </h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -564,7 +567,9 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">
+                    INVEST
+                  </h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -602,7 +607,9 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">
+                    INVEST
+                  </h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -640,7 +647,9 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">
+                    INVEST
+                  </h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -678,7 +687,9 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">WITHDRAW</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">
+                    WITHDRAW
+                  </h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -716,7 +727,9 @@
               </div>
               <div>
                 <div class="invest">
-                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">INVEST</h4>
+                  <h4 class="text-light-2 fs-1366-14 fs-768-12 fw-normal">
+                    INVEST
+                  </h4>
                 </div>
                 <div class="funds">
                   <h4 class="text-light-2 fs-1366-14 fw-normal">
@@ -739,13 +752,14 @@
               </div>
             </a>
           </div>
+        </div>
 
-          <div class="transactions"></div>
-        </section>
-      </main>
+        <div class="transactions"></div>
+      </section>
+    </main>
 
-      <!-- --------------------------------------------- MAIN END --------------------------------------------- -->
-    </div>
+    <!-- --------------------------------------------- MAIN END --------------------------------------------- -->
+    <!-- </div> -->
     <!-- --------------------------------------------- Custom scripts --------------------------------------------- -->
     <script defer src="./assets/js/select.js"></script>
   </body>
