service left only

--- a/index.html
+++ b/index.html
@@ -2172,7 +2172,7 @@
             <span></span>
             <span></span>
           </button> -->
-          <svg
+          <!-- <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
@@ -2235,7 +2235,13 @@
                 </g>
               </g>
             </g>
-          </svg>
+          </svg> -->
+          <img
+            height="24px"
+            width="24px"
+            src="./assets/vector/menu-new.svg"
+            alt="menu"
+          />
         </a>
         <a class="smo">
           <img src="./assets/images/user.svg" />
