--- a/notifications.html
+++ b/notifications.html
@@ -399,7 +399,7 @@
           <div class="head">
             <img class="close" src="./assets/images/close.svg" alt="close" />
             <div class="text">
-              <h2 class="fs-1366-24">
+              <h2 class="fs-1366-24 fs-575-20">
                 <img src="./assets/vector/back-arrow.svg" alt="arrow" /> All
                 Notifications
               </h2>
