--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -396,13 +396,13 @@
       <section id="refer-and-invest">
         <div class="top-fixed-bar">
           <h2 class="title">
-            <img src="./assets/vector/back-arrow.svg" alt="back" /> Refer and
-            Invest
+            <img src="./assets/vector/back-arrow.svg" alt="back" />
+            <span class="fs-1366-24">Refer and Invest</span>
           </h2>
         </div>
 
         <div class="lower-content">
-          <div class="tabs pt-5">
+          <div class="tabs">
             <div data-toggle="#rewards" class="tab active fs-16">
               Total Rewards
             </div>
@@ -443,13 +443,7 @@
                 </div>
                 <div class="sub-section">
                   <h4
-                    class="
-                      text-light-2
-                      fs-18 fs-1366-14 fs-650-14
-                      mb-sm
-                      mt-sm
-                      small-text
-                    "
+                    class="text-light-2 fs-18 fs-1366-14 fs-650-14 small-text"
                   >
                     TOTAL REWARDS
                   </h4>
@@ -487,7 +481,7 @@
                   </h3>
                 </div>
                 <div class="social-sub-section sub-section">
-                  <div class="copy fs-18 fs-1366-14 fs-768-18 fw-600">
+                  <div class="copy fs-18 fw-600">
                     PALA2389
                     <img
                       class="copyer"
