--- a/transaction.html
+++ b/transaction.html
@@ -392,7 +392,7 @@
       <main id="sidenav-right-content" class="transactions-right">
         <section id="transaction">
           <a class="top-fixed-bar" href="./transactions.html">
-            <h2 class="title fs-1366-24">
+            <h2 class="title fs-1366-24 fs-575-20">
               <!-- <img
                 class="back"
                 src="./assets/vector/arrow-left.svg"
