--- a/uploading.html
+++ b/uploading.html
@@ -102,7 +102,7 @@
               </div>
             </div>
 
-            <div class="uploading d-none d-md-block">
+            <div class="uploading d-768-none">
               <div class="upload-head d-flex justify-content-between">
                 <div
                   class="
@@ -135,7 +135,9 @@
             </div>
           </div>
         </div>
-        <button class="bottom-btn btn btn-bg-primary">Continue</button>
+        <button class="bottom-btn btn btn-bg-primary d-769-none">
+          Continue
+        </button>
       </div>
     </section>
 
