adds changes of details page

--- a/service.html
+++ b/service.html
@@ -53,7 +53,7 @@
     <script src="./js/Javascript.js" defer></script>
   </head>
 
-  <body class="planyybody">
+  <body class="planyybody service">
     <div class="checking"><img src="./assets/images/check1.png" /></div>
     <div class="planyy_contain">
       <div class="col-12 p-0 mt-0">
