--- a/allocation-confirmation.html
+++ b/allocation-confirmation.html
@@ -59,6 +59,7 @@
               id="myRange"
             />
           </div>
+          <div class="p-container"></div>
 
           <div class="btns">
             <button class="btn btn-outlined-dark">Cancel</button>
