--- a/service.html
+++ b/service.html
@@ -1164,7 +1164,14 @@
                                     </div>
                                     <div class="msoinvestproduct_box_right">
                                       <div class="head">
-                                        <div class="fw-600 fs-18 title lh-24">
+                                        <div
+                                          class="
+                                            fw-600
+                                            fs-18 fs-1366-14 fs-575-12
+                                            title
+                                            lh-24 lh-1366-18
+                                          "
+                                        >
                                           Axis Banking And Financial Services
                                           Growth Direct Plan 2021
                                         </div>
@@ -1175,7 +1182,14 @@
                                               src="./assets/images/star.svg"
                                               alt="star"
                                             />
-                                            <div class="fw-600 fs-18">5</div>
+                                            <div
+                                              class="
+                                                fw-600
+                                                fs-18 fs-1366-14 fs-575-12
+                                              "
+                                            >
+                                              5
+                                            </div>
                                           </div>
                                           <div class="card-menu d-769-none">
                                             <a
@@ -1194,12 +1208,18 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fw-18
+                                              fs-18 fs-1366-14 fs-575-12
                                             "
                                           >
                                             Allocation
                                           </div>
-                                          <div class="big-text fs-32 fw-600">
+                                          <div
+                                            class="
+                                              big-text
+                                              fs-32 fs-1366-24 fs-575-20
+                                              fw-600
+                                            "
+                                          >
                                             30%
                                           </div>
                                         </div>
@@ -1208,12 +1228,18 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fw-18
+                                              fs-18 fs-1366-14 fs-575-12
                                             "
                                           >
                                             Amount
                                           </div>
-                                          <div class="big-text fs-32 fw-600">
+                                          <div
+                                            class="
+                                              big-text
+                                              fs-32 fs-1366-24 fs-575-20
+                                              fw-600
+                                            "
+                                          >
                                             ₹9,000
                                           </div>
                                         </div>
@@ -1222,14 +1248,20 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fw-18
+                                              fs-18 fs-1366-14 fs-575-12
                                               frequency
                                             "
                                           >
                                             Frequency
                                           </div>
-                                          <div class="big-text fs-32 fw-600">
-                                            <div class="tag fs-14 text-light-2">
+                                          <div class="big-text fw-600">
+                                            <div
+                                              class="
+                                                tag
+                                                fs-14 fs-1366-12 fs-575-10
+                                                text-light-2
+                                              "
+                                            >
                                               MONTHLY
                                             </div>
                                           </div>
@@ -1239,15 +1271,21 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fw-18
+                                              fs-18 fs-1366-14 fs-575-12
                                             "
                                           >
                                             RETURNS(1Y)
                                           </div>
-                                          <div class="big-text fs-24 fw-600">
+                                          <div
+                                            class="
+                                              big-text
+                                              fs-24 fs-1366-18 fs-575-14
+                                              fw-600
+                                            "
+                                          >
                                             9.4%
                                             <img
-                                              class="ml-2"
+                                              class="ml-1 triangle"
                                               src="./assets/images/green-triangle.svg"
                                               alt="triangle"
                                             />
@@ -1706,6 +1744,8 @@
                                     </div>
                                   </div> -->
 
+                                  <!-- TODOOOOOOOOOOOOOO -->
+
                                   <div class="msoinvestproduct_box">
                                     <div class="msoinvestproduct_box_left">
                                       <img
@@ -1744,7 +1784,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fw-18
+                                              fs-18 fs-1366-14
                                             "
                                           >
                                             Allocation
@@ -1758,7 +1798,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fw-18
+                                              fs-18 fs-1366-14
                                             "
                                           >
                                             Amount
@@ -1772,7 +1812,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fw-18
+                                              fs-18 fs-1366-14
                                             "
                                           >
                                             Gain
@@ -1786,7 +1826,167 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fw-18
+                                              fs-18 fs-1366-14
+                                              frequency
+                                            "
+                                          >
+                                            Frequency
+                                          </div>
+                                          <div class="big-text fs-32 fw-600">
+                                            <div class="tag fs-14 text-light-2">
+                                              MONTHLY
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                      <div
+                                        class="
+                                          msoinvestproduct_box_right_p3
+                                          options
+                                        "
+                                      >
+                                        <div
+                                          class="
+                                            msoinvestproduct_box_right_p3_s1
+                                          "
+                                        >
+                                          <a href="#"></a>
+                                          <a href="#"></a>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="msoinvestproduct_box">
+                                    <div class="msoinvestproduct_box_left">
+                                      <img
+                                        src="./assets/images/bank_logo.svg"
+                                      />
+                                    </div>
+                                    <div class="msoinvestproduct_box_right">
+                                      <div class="head">
+                                        <div
+                                          class="
+                                            fw-600
+                                            fs-18 fs-1366-14 fs-575-12
+                                            title
+                                            lh-24 lh-1366-18
+                                          "
+                                        >
+                                          Axis Banking And Financial Services
+                                          Growth Direct Plan 2021
+                                        </div>
+                                        <div class="options">
+                                          <!-- <div class="star-reviews">
+                                            <img
+                                              class="star mr-1"
+                                              src="./assets/images/star.svg"
+                                              alt="star"
+                                            />
+                                            <div
+                                              class="
+                                                fw-600
+                                                fs-18 fs-1366-14 fs-575-12
+                                              "
+                                            >
+                                              5
+                                            </div>
+                                          </div> -->
+                                          <div class="return">
+                                            <div
+                                              class="
+                                                fw-600
+                                                fs-24 fs-1366-18 fs-575-14
+                                              "
+                                            >
+                                              8.3%
+                                            </div>
+                                            <img
+                                              class="ml-2 pb-1 triangle"
+                                              src="./assets/images/green-triangle.svg"
+                                              alt="triangle"
+                                            />
+                                          </div>
+                                          <div
+                                            class="card-menu five d-769-none"
+                                          >
+                                            <a
+                                              class="edit"
+                                              data-toggle="modal"
+                                              data-target="#exampleModalx"
+                                              ><img
+                                                src="./assets/images/menu-2.svg"
+                                            /></a>
+                                          </div>
+                                        </div>
+                                      </div>
+                                      <div class="body">
+                                        <div class="item">
+                                          <div
+                                            class="
+                                              small-text
+                                              text-light-2
+                                              fs-18 fs-1366-14 fs-575-12
+                                            "
+                                          >
+                                            Allocation
+                                          </div>
+                                          <div
+                                            class="
+                                              big-text
+                                              fs-32 fs-1366-24 fs-575-20
+                                              fw-600
+                                            "
+                                          >
+                                            30%
+                                          </div>
+                                        </div>
+                                        <div class="item">
+                                          <div
+                                            class="
+                                              small-text
+                                              text-light-2
+                                              fs-18 fs-1366-14 fs-575-12
+                                            "
+                                          >
+                                            Amount
+                                          </div>
+                                          <div
+                                            class="
+                                              big-text
+                                              fs-32 fs-1366-24 fs-575-20
+                                              fw-600
+                                            "
+                                          >
+                                            ₹9,000
+                                          </div>
+                                        </div>
+                                        <div class="item">
+                                          <div
+                                            class="
+                                              small-text
+                                              text-light-2
+                                              fs-18 fs-1366-14 fs-575-12
+                                            "
+                                          >
+                                            Gain
+                                          </div>
+                                          <div
+                                            class="
+                                              big-text
+                                              fs-32 fs-1366-24 fs-575-20
+                                              fw-600
+                                            "
+                                          >
+                                            -
+                                          </div>
+                                        </div>
+
+                                        <div class="item">
+                                          <div
+                                            class="
+                                              small-text
+                                              text-light-2
+                                              fs-18 fs-1366-14
                                               frequency
                                             "
                                           >
