--- a/allocation-confirmation.html
+++ b/allocation-confirmation.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="slidecontainer">
-            <div class="text-light-2 f-12 guide">Slide left or right</div>
+            <div class="text-light-2 fs-575-12 guide">Slide left or right</div>
             <input
               type="range"
               min="1"
