adds gap in otp modal tablet

--- a/index.html
+++ b/index.html
@@ -2097,7 +2097,7 @@
               </div>
             </div>
             <div class="col-md-7">
-              <h2 class="fw-600 resist-size text-center text-md-left">
+              <h2 class="fw-600 resist-size text-center text-md-left verify">
                 Verify Your Mobile OTP
               </h2>
               <div class="fs-14 sub">
