fixes size of h2s

--- a/service.html
+++ b/service.html
@@ -63,7 +63,7 @@
             <div class="planyy_hed">
               <div class="planyy_hed_p1">
                 <a href="index.html"
-                  ><h2>PLA<span>NYY</span></h2></a
+                  ><h2 class="resist-size">PLA<span>NYY</span></h2></a
                 >
               </div>
               <div class="planyy_hed_p2">
@@ -463,7 +463,7 @@
                       </div>
                       <div class="Generated_Financial_plans_data_box_p2">
                         <h3>EMERGENCY FUND</h3>
-                        <h2>₹3.2<span>lacs</span></h2>
+                        <h2 class="resist-size">₹3.2<span>lacs</span></h2>
                         <p>amount needed</p>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
@@ -512,7 +512,7 @@
                       </div>
                       <div class="Generated_Financial_plans_data_box_p2">
                         <h3>RETIREMENT</h3>
-                        <h2>₹3.5<span>cr</span></h2>
+                        <h2 class="resist-size">₹3.5<span>cr</span></h2>
                         <p>
                           amount needed <i>Age At<b>60</b></i>
                         </p>
@@ -579,7 +579,7 @@
                       </div>
                       <div class="Generated_Financial_plans_data_box_p2">
                         <h3>Car</h3>
-                        <h2>₹2.6<span>lacs</span></h2>
+                        <h2 class="resist-size">₹2.6<span>lacs</span></h2>
                         <p>dp amount needed</p>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
@@ -626,7 +626,7 @@
                       </div>
                       <div class="Generated_Financial_plans_data_box_p2">
                         <h3>home</h3>
-                        <h2>₹11<span>lacs</span></h2>
+                        <h2 class="resist-size">₹11<span>lacs</span></h2>
                         <p>dp amount needed</p>
                       </div>
                       <div class="Generated_Financial_plans_data_box_p3">
@@ -2340,7 +2340,7 @@
                 </div>
                 <div class="msoretirepop_p2_s2">
                   <div class="msoretirepop_p2_s2_text">
-                    <h2>RETIREMENT</h2>
+                    <h2 class="resist-size">RETIREMENT</h2>
                     <h4>A fully guided way to reach your retirement target.</h4>
                   </div>
                   <div class="msoretirepop_p2_s2_button">
@@ -2363,7 +2363,7 @@
                   </div>
                   <div class="msoretirepop_p2mobile_box_p3">
                     <h3>RETIREMENT</h3>
-                    <h2>₹3.5<span>CR</span></h2>
+                    <h2 class="resist-size">₹3.5<span>CR</span></h2>
                     <p>AMOUNT NEEDED</p>
                   </div>
                 </div>
@@ -2373,7 +2373,9 @@
                   </div>
                   <div class="progress-section">
                     <div class="head d-1024-none">
-                      <h2 class="fs-32 fw-700">RETIREMENT</h2>
+                      <h2 class="resist-size" class="fs-32 fw-700">
+                        RETIREMENT
+                      </h2>
                       <div class="text-light-2 fs-16 mb-2">
                         A fully guided way to reach your retirement target.
                       </div>
@@ -2782,7 +2784,7 @@
                       <span></span>
                     </div>
                     <div class="makepaymentmodel_p1_s1_p4">
-                      <h2>₹24,000</h2>
+                      <h2 class="resist-size">₹24,000</h2>
                     </div>
                   </div>
                   <div class="makepaymentmodel_p1_s2">
@@ -2800,7 +2802,7 @@
                       <span></span>
                     </div>
                     <div class="makepaymentmodel_p1_s1_p4">
-                      <h2>₹3,900</h2>
+                      <h2 class="resist-size">₹3,900</h2>
                     </div>
                   </div>
                   <div class="makepaymentmodel_p1_s4">
@@ -2818,7 +2820,7 @@
                       <span></span>
                     </div>
                     <div class="makepaymentmodel_p1_s1_p4">
-                      <h2>₹2,100</h2>
+                      <h2 class="resist-size">₹2,100</h2>
                     </div>
                   </div>
                   <div class="makepaymentmodel_p1_s6">
@@ -2856,7 +2858,7 @@
                   </div>
                 </div>
                 <div class="makepaymentmodel_p2">
-                  <h2>Order <span>Summary</span></h2>
+                  <h2 class="resist-size">Order <span>Summary</span></h2>
                   <ul>
                     <li>
                       <div class="makepaymentmodel_p2_li_left">
